write story and rules and allow click to skip transition

--- a/index.html
+++ b/index.html
@@ -10,5 +10,15 @@
   </head>
   <body>
     <h1 class="welcomeText">Welcome To RPS RPG!</h1>
+    <h2 class="rules">
+      The Goblin Lord has taken over the world! For some inconcievable reason,
+      the military has failed and it is up to you to save the world. The Goblin
+      Lord has agreed to surrender should you best him and his army in a game of
+      rock paper scissors. However, beware as things are not as simple as they
+      seem. You must loot the goblin army in order to aquire gold to upgrade
+      your rock, paper, and scissors for you to have an actual chance against
+      the Goblin Lord.
+    </h2>
+    <button></button>
   </body>
 </html>
