finish starting page and redirect to main page

--- a/index.html
+++ b/index.html
@@ -6,19 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RPS RPG</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="./javascript/globals.js"></script>
     <script src="app.js" defer></script>
   </head>
   <body>
     <h1 class="welcomeText">Welcome To RPS RPG!</h1>
-    <h2 class="rules">
-      The Goblin Lord has taken over the world! For some inconcievable reason,
-      the military has failed and it is up to you to save the world. The Goblin
-      Lord has agreed to surrender should you best him and his army in a game of
-      rock paper scissors. However, beware as things are not as simple as they
-      seem. You must loot the goblin army in order to aquire gold to upgrade
-      your rock, paper, and scissors for you to have an actual chance against
-      the Goblin Lord.
-    </h2>
-    <button></button>
+    <div class="welcomes">
+      <h2 class="rules">
+        The Goblin Lord has taken over the world! For some inconcievable reason,
+        the military has failed and it is up to you to save the world. The
+        Goblin Lord has agreed to surrender should you best him and his army in
+        a game of rock paper scissors. However, beware as things are not as
+        simple as they seem. You must loot the goblin army in order to aquire
+        gold to upgrade your rock, paper, and scissors for you to have an actual
+        chance against the Goblin Lord.
+      </h2>
+      <form class="loginButtons">
+        <input type="text" value="John Doe" class="name" id="nameField" />
+        <button type="submit" class="name">Get Started</button>
+      </form>
+    </div>
   </body>
 </html>
