link first page to main page while tranferring username through local storage

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RPS RPG</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="./javascript/globals.js"></script>
-    <script src="app.js" defer></script>
+    <link rel="stylesheet" href="./css/style.css" />
+    <script src="./javascript/app.js" defer></script>
   </head>
   <body>
     <h1 class="welcomeText">Welcome To RPS RPG!</h1>
@@ -22,7 +21,7 @@
         chance against the Goblin Lord.
       </h2>
       <form class="loginButtons">
-        <input type="text" value="John Doe" class="name" id="nameField" />
+        <input type="text" placeholder="John Doe" class="name" id="nameField" />
         <button type="submit" class="name">Get Started</button>
       </form>
     </div>
