--- a/html/main.html
+++ b/html/main.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>RPS RPG</title>
+    <link rel="stylesheet" href="../css/main.css" />
     <script src="../javascript/main.js" defer></script>
   </head>
   <body>
-    <h1>Hello</h1>
+    <h1>Second Page</h1>
   </body>
 </html>
