--- a/html/main.html
+++ b/html/main.html
@@ -9,6 +9,12 @@
     <script src="../javascript/main.js" defer></script>
   </head>
   <body>
-    <h1>Second Page</h1>
+    <header>
+      <img src="../images/rpg-logo.png" />
+      <h1>RPG RPG</h1>
+      <button>Restart</button>
+    </header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
