add mob name, health bar, and picture

--- a/html/main.html
+++ b/html/main.html
@@ -10,11 +10,25 @@
   </head>
   <body>
     <header>
-      <img src="../images/rpg-logo.png" />
+      <img src="../images/rpg-logo.png" alt="RPS RPG logo" />
       <h1>RPG RPG</h1>
       <button>Restart</button>
     </header>
-    <main></main>
+    <main>
+      <h1 id="mob-name">Goblin Scout</h1>
+      <div id="mob-health">
+        <div class="health"></div>
+        <div class="health"></div>
+        <div class="health"></div>
+        <div class="health"></div>
+        <div class="health"></div>
+        <div class="health"></div>
+        <div class="health"></div>
+      </div>
+      <div id="mob-portrait">
+        <img src="../images/goblin-scout.jpg" alt="" />
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
