finish html/css skeleton

--- a/html/main.html
+++ b/html/main.html
@@ -26,9 +26,45 @@
         <div class="health"></div>
       </div>
       <div id="mob-portrait">
-        <img src="../images/goblin-scout.jpg" alt="" />
+        <img src="../images/goblin-scout.png" alt="goblin" />
+      </div>
+      <div id="rps-icons">
+        <img src="../images/rock.png" alt="rock" id="rock-icon" />
+
+        <img src="../images/paper.png" alt="paper" id="paper-icon" />
+
+        <img src="../images/scissors.png" alt="scissors" id="scissors-icon" />
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div id="player-hp">
+        <h1 id="lives">5</h1>
+        <img src="../images/heart-icon.png" alt="heart-icon" />
+      </div>
+      <div id="player-gold">
+        <h1 id="gold">0</h1>
+        <img src="../images/coin-icon.png" alt="coin-icon" />
+      </div>
+
+      <div id="progress-bar">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
+      <div id="hp">
+        <img src="../images/healing-potion.png" alt="health potion" />
+        <h4 id="hp-cost">1</h4>
+      </div>
+      <div id="damage">
+        <img src="../images/damage-icon.png" alt="dmg-icon" />
+        <h4 id="dmg-cost">1</h4>
+      </div>
+      <div id="luck">
+        <img src="../images/lucky-cat.png" alt="chinese lucky cat" />
+        <h4 id="luck-cost">1</h4>
+      </div>
+    </footer>
   </body>
 </html>
