finish what happens if computer wins turn

--- a/html/main.html
+++ b/html/main.html
@@ -22,12 +22,11 @@
         <div class="health"></div>
         <div class="health"></div>
         <div class="health"></div>
-        <div class="health"></div>
-        <div class="health"></div>
       </div>
       <div id="mob-portrait">
-        <img src="../images/goblin-scout.png" alt="goblin" />
+        <img src="../images/goblin-scout.png" alt="goblin" id="goblin" />
       </div>
+      <h1 id="text"></h1>
       <div id="rps-icons">
         <img src="../images/rock.png" alt="rock" id="rock-icon" />
 
@@ -47,7 +46,6 @@
       </div>
 
       <div id="progress-bar">
-        <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
