--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
         chance against the Goblin Lord.
       </h2>
       <form class="loginButtons">
-        <input type="text" placeholder="John Doe" class="name" id="nameField" />
+        <input
+          type="text"
+          placeholder="Enter Your Name"
+          class="name"
+          id="nameField"
+          value="John Doe"
+        />
         <button type="submit" class="name">Get Started</button>
       </form>
     </div>
