finish shop buttons and what happens if player wins

--- a/html/main.html
+++ b/html/main.html
@@ -23,6 +23,7 @@
         <div class="health"></div>
         <div class="health"></div>
       </div>
+      <div id="crit-bubble" class="show-bubble">Crit!</div>
       <div id="mob-portrait">
         <img src="../images/goblin-scout.png" alt="goblin" id="goblin" />
       </div>
