--- a/html/main.html
+++ b/html/main.html
@@ -12,7 +12,7 @@
     <header>
       <img src="../images/rpg-logo.png" alt="RPS RPG logo" />
       <h1>RPG RPG</h1>
-      <button>Restart</button>
+      <button id="restart">Restart</button>
     </header>
     <main>
       <h1 id="mob-name">Goblin Scout</h1>
